--- a/homeworks/task_05/style.css
+++ b/homeworks/task_05/style.css
@@ -1,24 +1,27 @@
 /* ваш код */
-
+* {
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 35px;
+}
 img {
-    padding: 50px;
-
+    width: 500px;
 }
 
-div {
+.general {
     position: relative;
     width: fit-content;
     height: fit-content;
+    padding: 50px;
 }
 
 .top-left {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 70px;
-    width: 70px;
-    font-size: 35px;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    height: 60px;
+    width: 60px;
+
     position: absolute;
     top: 90px;
     left: 90px;
@@ -33,12 +36,11 @@ div {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 70px;
-    width: 150px;
+    height: 60px;
+    width: 140px;
     background-color: rgb(255, 86, 0);
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 35px;
+    cursor: pointer;
 }
 
 .red {
