--- a/homeworks/task_06/style.css
+++ b/homeworks/task_06/style.css
@@ -6,6 +6,8 @@ body {
     position: relative;
     background-color: black;
     padding: 0px 50px;
+    margin: 0px;
+
 }
 
 h1 {
@@ -48,7 +50,7 @@ img {
 }
 
 header {
-    top: -100px;
+    top: -140px;
     padding: 0;
     position: sticky;
     display: flex;
@@ -62,7 +64,9 @@ header {
     height: 300px;
     width: 800px;
     margin: 20px;
-    border-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
     border: solid rgba(207, 0, 0, 0.589);
     background-color: black;
+    margin: 0px
 }
