--- a/homeworks/task_06/style.css
+++ b/homeworks/task_06/style.css
@@ -25,6 +25,7 @@ main {
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-auto-rows: auto;
     gap: 20px;
+    
 }
 
 .items-grid {
@@ -35,6 +36,8 @@ main {
     flex-direction: column;
     padding: 10px;
     background-color: tomato;
+    align-items:;
+    
 }
 
 span {
